Issue 86 VoltageLevelLayoutFactory customization (#90)
* Revert VoltageLevelLayoutFactoryBean
* Add width & height parameters for random layout
* Improve code quality
* Make it simple
* Remove useless bean classes creation
* New name proposition for VoltageLevelLayoutFactoryType
* Fix FXML
* Taking into account PR comments

---------

Signed-off-by: Thomas ADAM <tadam@silicom.fr>